crates/wat-core/tests/snapshots/lexer__snap_and_or.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"a && b || c\")"
---
[
    Word(
        "a",
    ),
    And,
    Word(
        "b",
    ),
    Or,
    Word(
        "c",
    ),
    Eof,
]
