crates/wat-core/tests/snapshots/lexer__snap_backslash_space.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(r\"echo a\\ b\")"
---
[
    Word(
        "echo",
    ),
    Word(
        "a b",
    ),
    Eof,
]
