crates/wat-core/tests/snapshots/lexer__snap_chained_pipes.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"a | b | c | d\")"
---
[
    Word(
        "a",
    ),
    Pipe,
    Word(
        "b",
    ),
    Pipe,
    Word(
        "c",
    ),
    Pipe,
    Word(
        "d",
    ),
    Eof,
]
