crates/wat-core/tests/snapshots/lexer__snap_comment.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"echo hi # this is a comment\")"
---
[
    Word(
        "echo",
    ),
    Word(
        "hi",
    ),
    Eof,
]
