crates/wat-core/tests/snapshots/lexer__snap_dollar_preserved_in_double_quote.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(r#\"echo \"$HOME\"\"#)"
---
[
    Word(
        "echo",
    ),
    Word(
        "$HOME",
    ),
    Eof,
]
