crates/wat-core/tests/snapshots/lexer__snap_double_quoted.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(r#\"echo \"hello world\"\"#)"
---
[
    Word(
        "echo",
    ),
    Word(
        "hello world",
    ),
    Eof,
]
