crates/wat-core/tests/snapshots/lexer__snap_double_quoted_escape.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(r#\"echo \"a\\\"b\"\"#)"
---
[
    Word(
        "echo",
    ),
    Word(
        "a\"b",
    ),
    Eof,
]
