crates/wat-core/tests/snapshots/lexer__snap_echo_hello.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"echo hello\")"
---
[
    Word(
        "echo",
    ),
    Word(
        "hello",
    ),
    Eof,
]
