crates/wat-core/tests/snapshots/lexer__snap_empty_double_quote.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(r#\"echo \"\"\"#)"
---
[
    Word(
        "echo",
    ),
    Word(
        "",
    ),
    Eof,
]
