crates/wat-core/tests/snapshots/lexer__snap_empty_single_quote.snap
---
source: crates/wat-core/tests/lexer.rs
expression: "toks(\"echo ''\")"
---
[
    Word(
        "echo",
    ),
    Word(
        "\u{2}\u{2}",
    ),
    Eof,
]
