crates/wat-core/tests/snapshots/lexer__snap_lex_error_double_quote.snap
---
source: crates/wat-core/tests/lexer.rs
expression: err
---
LexError {
    message: "unterminated double quote",
    offset: 0,
}
